# Project-SolarWatch

./: .gitignore  Final_Strategic_Insights_Report.md  LICENSE  README.md  pyproject.toml  requirements.txt  settings.yaml  setup.cfg
.agents/skills/analytics_skill/: SKILL.md
.agents/skills/dashboard_skill/: SKILL.md
.agents/skills/ingestion_skill/: SKILL.md
.agents/skills/llm_processing_skill/: SKILL.md
data/: macro_summary.md  solarwatch.db
docs/: core_development_principles.md  technical_design_document.md
scripts/: advanced_data_mining.py  init_db.py  probe_appgallery.py  run_ingestion.py  run_macro_summary.py  run_processing.py  sync_release_history.py
src/: __init__.py
src/analytics/: __init__.py
src/config/: __init__.py  constants.py  settings.py
src/dashboard/: app.py  styles.py
src/ingestion/: __init__.py  app_store_scraper.py  base_scraper.py  google_play_scraper.py  ingestion_manager.py
src/models/: __init__.py  database.py
src/processing/: __init__.py  hallucination_guard.py  llm_client.py  processor.py  prompt_templates.py  response_parser.py
src/reporting/: __init__.py
src/utils/: __init__.py  db.py  logger.py  text_utils.py
tests/: __init__.py  test_hallucination_guard.py  test_ingestion.py  test_processing.py
